# parallelts-range-exploration

./: .gitignore  README.md
examples/: CMakeLists.txt
examples/benchmarks/: CMakeLists.txt  dot_product_fast.cpp  dot_product_slow.cpp  mandelbrot_fast.cpp  mandelbrot_slow.cpp  saxpy_fast.cpp  saxpy_faster.cpp  saxpy_slow.cpp  sgemv_fast.cpp  sgemv_slow.cpp  word_count_fast.cpp  word_count_slow.cpp
examples/cmake/Modules/: FindComputeCpp.cmake
examples/include/: aligned_allocator.h  experimental.h
examples/scripts/: parse.sh  plot_speedup_from_fusion.r  run_all_benchmarks.sh  run_benchmark.sh
examples/tests/: CMakeLists.txt  accessor.cpp  accessor_updates.cpp  aligned_allocator.cpp  chunk.cpp  cycle.cpp  dot_product.cpp  dot_product_slow.cpp  dot_product_zip.cpp  dot_product_zip_copy.cpp  mandelbrot.cpp  monte-carlo.cpp  my_zip_gvector_view.cpp  my_zip_just_gvector.cpp  nbody.cpp  reduce.cpp  saxpy.cpp  sgemv.cpp  sum.cpp  transform.cpp  view_transform.cpp  view_transform_2.cpp  view_zip_workaround_copy.cpp  view_zip_workaround_ptr.cpp  voronoi.cpp  word_count.cpp
examples/tryout/: CMakeLists.txt  accessor.cpp  compile_host.sh  dot_product.cpp  dot_product_slow.cpp  dot_product_zip.cpp  dot_product_zip_copy.cpp  my_zip.h  my_zip_gvector_view.cpp  my_zip_just_gvector.cpp  saxpy.cpp  sum.cpp  transform.cpp  transform_non_multiple.cpp  tryout.cpp  view_concat.cpp  view_cycle.cpp  view_drop.cpp  view_drop_while.cpp  view_generate.cpp  view_generate_n.cpp  view_intersperse.cpp  view_ints.cpp  view_keys.cpp  view_repeat.cpp  view_repeat_n.cpp  view_replace.cpp  view_replace_if.cpp  view_reverse.cpp  view_sample.cpp  view_slice.cpp  view_stride.cpp  view_tail.cpp  view_take.cpp  view_take_while.cpp  view_transform.cpp  view_transform_2.cpp  view_values.cpp  view_zip_workaround_copy.cpp  view_zip_workaround_ptr.cpp
gstorm/: CMakeLists.txt
gstorm/include/: gstorm.h
gstorm/include/detail/: traits.h
gstorm/include/detail/actions/: transform.h
gstorm/include/detail/algorithms/: config.h  fill.h  for_each.h  reduce.h  transform.h
gstorm/include/detail/decorators/: ref.h
gstorm/include/detail/operators/: async.h  copy.h  functional.h
gstorm/include/detail/ranges/: index.h  vector.h  vector_base.h
gstorm/include/meta/: executor.h  optional  static_const.h  tuple.h  tuple_helper.h
gstorm/tests/: transform.cpp
range-v3/: range-v3.sln  range-v3.vcxproj  range-v3.vcxproj.filters  sycl_range_v3.diff
range-v3/doc/std/: show.cmd
range-v3/example/: CMakeLists.txt  comprehensions.cpp  tests.cpp
range-v3/include/meta/: meta.hpp
range-v3/include/range/v3/algorithm/: copy_n.hpp  generate_n.hpp  merge.hpp  partition_copy.hpp  set_algorithm.hpp  transform.hpp
range-v3/include/range/v3/algorithm/aux_/: merge_n.hpp  merge_n_with_buffer.hpp  sort_n_with_buffer.hpp
range-v3/include/range/v3/detail/: config.hpp  variant.hpp
range-v3/include/range/v3/utility/: associated_types.hpp  basic_iterator.hpp  box.hpp  common_tuple.hpp  common_type.hpp  compressed_pair.hpp  dangling.hpp  functional.hpp  random.hpp  swap.hpp  tagged_tuple.hpp  tuple_algorithm.hpp
range-v3/include/range/v3/view/: chunk.hpp  concat.hpp  cycle.hpp  zip.hpp  zip_with.hpp
range-v3/include/sycl/: tuple.h
range-v3/test/algorithm/: partition_copy.cpp  set_symmetric_difference.hpp  set_union.hpp  transform.cpp
range-v3/test/utility/: basic_iterator.cpp  meta.cpp  swap.cpp
range-v3/test/view/: drop.cpp  transform.cpp  zip.cpp
